# swindle_bootloader_ch32v3x

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootloader_config.cmake  build_default.cmake  ci_run.sh  devpod.sh  dfu_test.sh  dfu_update.txt  flash_config.h.in  mcuSelect.cmake  platformConfig.cmake  ram_layout.html  tiny.cmake  toolchain_clang.cmake  toolchain_gcc.cmake
.devcontainer/: Dockerfile  devcontainer.json
esprit_mini/: debug.cpp  gpio.cpp  irq.cpp  peripheral.cpp  rcu.cpp  system_timer.cpp
esprit_mini/include/: esprit.h  lnAssert.h  lnFMC_priv.h  lnGPIO.h  lnGPIO_pins.h  lnIRQ.h  lnPeripheral_priv.h  lnPeripheral_priv_ch32v3x.h  lnPeripherals.h  lnRCU.h  lnRCU_priv.h  lnSystemTime.h
ldscript/: clang.lld
linker/: stage1.ld  stage2.ld
lnArduino_mini/: CMakeLists.txt  clang.lld.in  clang_ram_offset_by_8.lld.in  ld.lds.in  ld_ram_offset_by_8.lds.in  lnCpuID_riscv_ch32v3x.cpp  lnFMC.cpp  lnIRQ_riscv_ch32v3x.cpp  lnIRQ_riscv_priv_ch32v3x.h  lnRCU.cpp  lnRunTime_riscv_ch32v3x.cpp  lnSerial.cpp  lnSystemInit.cpp  start.S  start.cpp  toolchain_clang.cmake  toolchain_riscv_ch32v3x.cmake
lnArduino_mini/ch32_src/: lnIRQ_riscv_ch32v3x.cpp
lnArduino_mini/include/: Arduino.h  FreeRTOS_mini.h  MapleFreeRTOS1000_pp.h  lnAFIO_priv.h  lnArduino.h  lnDebug.h  lnFMC.h  lnFMC_priv.h  lnGPIO.h  lnPeripherals.h  lnPinMapping.h  lnSerial.h
lnArduino_mini/override/: Arduino.h  MapleFreeRTOS1000.h  lnArduino.h  lnCpuID_riscv_ch32v3x.cpp  lnFreeRTOS.h  tusb_config.h
lnArduino_mini/src/: lnDebug_mini.cpp  lnSystemInit_mini.cpp  systemAlloc.cpp  systemHelper.cpp
override/: Arduino.h  MapleFreeRTOS1000_pp.h
riscv_ch32v3x/: start.S  start.cpp
src/: ch32_crc.c  ch32v3x_interrupt_table.cpp  check_status.cpp  dfu.cpp  driver_interrupt.cpp  driver_timer.cpp  driver_uart.cpp  go_dfu.cpp  hash_check.cpp  init_override.cpp  interrupt.cpp  interrupt_override.cpp  irq_override.cpp  lnDebug_empty.cpp  lnDebug_mini.cpp  lnSystemInit_mini.cpp  local_interrupt_table.h  logger.cpp  logger_debug.cpp  logger_override.cpp  main.cpp  memory_config.h  memory_config.h.in  pinout.h  rebooted.cpp  stubs.cpp  stubs_lowlevel.cpp  swindle_bl.h  usb_setup.cpp  xxhash.h
src/freertos_config/: FreeRTOSConfig.h  tusb_config.h
src_common/: memory_config.h.in  pinout.h  registers.h  stubs.cpp
src_stage1/: ch32_crc.c  main.cpp
src_stage2/: clocking.h  dfu.cpp  dfu_name.h  flash.h  stage2_entry.cpp  stage2_irq.cpp  usb.cpp  usb.h  usb_vid_pid.h
src_stage2/embedded_printf/: CMakeLists.txt  printf.c
tinyUsb/src/: CMakeLists.txt  tusb_config.h
tinyUsb/src/ch32v3x/old/: dcd_ch32_usbfs.c
tinyUsb/src/src/src/: tusb.c  tusb.h  tusb_option.h
tinyUsb/src/src/src/class/dfu/: dfu_device.c  dfu_device.h  dfu_rt_device.c  dfu_rt_device.h
tinyUsb/src/src/src/common/: tusb_common.h  tusb_compiler.h  tusb_debug.h  tusb_fifo.c  tusb_fifo.h  tusb_mcu.h  tusb_private.h  tusb_types.h  tusb_verify.h
tinyUsb/src/src/src/device/: dcd.h  usbd.c  usbd.h  usbd_control.c  usbd_pvt.h
tinyUsb/src/src/src/osal/: osal.h  osal_freertos.h  osal_mynewt.h  osal_none.h  osal_pico.h  osal_rtthread.h  osal_rtx4.h
tinyUsb/src/src/src/portable/wch/: ch32_usbfs_reg.h  ch32_usbhs_reg.h  dcd_ch32_usbfs.c  dcd_ch32_usbhs.c
tools/: bin2h.py
